fix(player): time is not visible in light theme default video layout

--- a/packages/vidstack/player/styles/default/layouts/video.css
+++ b/packages/vidstack/player/styles/default/layouts/video.css
@@ -267,6 +267,11 @@
   margin-left: 2px;
 }
 
+.light .vds-video-layout .vds-time,
+.vds-video-layout.light .vds-time {
+  color: var(--media-time-color, #f5f5f5);
+}
+
 /*
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Captions
